# submicro-execution-engine

./: .gitignore  ALPHA_ANALYSIS.md  ARCHITECTURE.md  BACKTESTING_SUMMARY.md  BENCHMARK_GUIDE.md  BROKER_INTEGRATION.md  BUSY_WAIT_EXPLAINED.md  CHANGELOG.md  CMakeLists.txt  CODE_VERIFICATION.md  COMPLETE_SYSTEM_GUIDE.md  Cargo.toml  DASHBOARD_GUIDE.md  DASHBOARD_VISUAL.md  FEATURES.md  INSTITUTIONAL_DATA_SUMMARY.txt  INSTITUTIONAL_LOGGING_COMPARISON.md  LATENCY_BUDGET.md  LATENCY_VISUAL.txt  LICENSE  MODEL_STORE_FIXES.md  MONITORING_SUMMARY.md  OPTIMIZATION_VERIFICATION.md  PRODUCTION_READINESS.md  PUBLICATION_READINESS.md  QUICKSTART_MONITORING.md  README.md  SUMMARY.md  SYSTEM_FEATURES.md  TECHNICAL_FEEDBACK.md  ULTRA_ELITE_SUMMARY.md  VERIFICATION.md  analyze_profit.py  build.sh  build_all.sh  build_backtest.sh  build_benchmark.sh  build_direct.sh  check_system_config.sh  generate_alpha_data.py  (+12 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  engagement_inquiry.md  sample_issue_template.md
dashboard/: README.md  dashboard.js  index.html
docs/: ARCHITECTURE.md  DASHBOARD_VISUAL.md  ENGAGEMENTS.md  FEATURES.md  MODEL_STORE_FIXES.md  NIC_DRIVER_REPO_PLAN.md  PRODUCTION_READINESS.md  QUICKSTART_MONITORING.md  SYSTEM_FEATURES.md  VERIFICATION.md
examples/: busy_wait_example.cpp
include/: avellaneda_stoikov.hpp  backtesting_engine.hpp  benchmark_suite.hpp  branch_optimization.hpp  custom_nic_driver.hpp  event_scheduler.hpp  fast_lob.hpp  fpga_inference.hpp  hawkes_engine.hpp  institutional_logging.hpp  jitter_profiler.hpp  lockfree_queue.hpp  preserialized_orders.hpp  risk_control.hpp  rust_ffi.hpp  simd_features.hpp  smart_order_router.hpp  solarflare_efvi.hpp  spin_loop_engine.hpp  vectorized_inference.hpp  websocket_server.hpp
institutional_verification/: ACQUISITION_TARGET_PROFILE.txt  PERFORMANCE_TIER_CLASSIFICATION.md  README.md  market_data_metadata.json
institutional_verification/logs/: INSTITUTIONAL_VERIFICATION_PACKAGE.txt
logs/: MANIFEST.sha256  README.md
scripts/: analyze_profit.py  build_all.sh  build_direct.sh  check_system_config.sh  generate_institutional_data.py  generate_institutional_verification.py  run_institutional_demo.sh  verify_institutional_package.py
src/: backtest_demo.cpp  lib.rs  main.cpp
tests/unit/: test_backtesting_engine.cpp  test_common_types.cpp  test_event_scheduler.cpp  test_fpga_inference.cpp
web/: DEPLOYMENT_GUIDE.md  index.html
web/public/: robots.txt  sitemap.xml
web/src/: App.tsx
web/src/components/: Changelog.tsx  Footer.tsx  Performance.tsx
